# plants

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose-all.yaml  docker-compose-plants.yaml  docker-compose.yaml  pyproject.toml
app/: main.py
app/controller/: Plants.py  example_controller.py  log_controller.py  plant_controller.py  plant_types_controller.py
app/database/: database.py
app/database/models/: Log.py  PlantType.py  example.py  plant.py  plant_type.py  plants.py
app/docs/: swagger.yaml
app/exceptions/: PlantsException.py  deviating_parameters.py  empty_package.py  internal_service_access.py  invalid_insertion.py  logger_messages.py  row_not_found.py
app/models/: Log.py  plant.py  plant_type.py
app/repository/: Plants.py  PlantsRepository.py
app/router/: __init__.py  example_router.py  log_router.py  plant_types_router.py
app/schemas/: Log.py  example.py  plant.py  plant_type.py  plants.py
app/service/: Measurements.py  Plants.py  Users.py  measurements_service.py  test_Plants.py
app/service/sql/: create-multiple-postgresql-databases.sh  examples1.sql  examples2.sql  init_database_plants.sh  init_table_plant_types.sh  init_table_plants.sh  init_tables.sh  init_tables.sql  init_tables_prod.sql  logs.sql  plant_types.sql  tablas.sql  tables.sql
app/utils/: sql_exception_handling.py
docs/: swagger.yaml
src/: hello.py
