[tool.poetry]
name = "plants"
version = "0.1.0"
description = ""
authors = ["Federico <fpacheco@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
uvicorn = "^0.27.0.post1"
python-dotenv = "^1.0.1"
flake8 = "^7.0.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
