[tool.poetry]
name = "plants"
version = "0.1.0"
description = ""
authors = ["Agustin Firmapaz <afirmapaz@fi.uba.ar>", "Federico <fpacheco@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
uvicorn = "^0.27.0.post1"
python-dotenv = "^1.0.1"
flake8 = "^7.0.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
