[tool.poetry]
name = "plants"
version = "0.1.0"
description = ""
authors = ["Agustin Firmapaz <afirmapaz@fi.uba.ar>", "Federico <fpacheco@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
uvicorn = "^0.27.0.post1"
python-dotenv = "^1.0.1"
flake8 = "^7.0.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
httpx = "^0.26.0"
pytest = { version = "8.2.0", optional = true }
pytest-cov = { version = "5.0.0", optional = true }
pytest-asyncio = { version = "0.23.6", optional = true }
setuptools = { version = "^69.5.1", optional = true }

[tool.poetry.extras]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "setuptools"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"